--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
-    "express": "^4.14.0"
+    "css-loader": "^0.26.0",
+    "express": "^4.14.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7"
   }
 }
